# WiTXtool

./: .gitignore  CMakeLists.txt  main.c  readme
.github/workflows/: build.yaml
include/: compress.h  crypto.h
src/: compress.c  crypto.c  main.c
